[gd_scene load_steps=22 format=3 uid="uid://baq06x4rooics"]

[ext_resource type="Script" path="res://save/player.gd" id="1_87q83"]
[ext_resource type="PackedScene" uid="uid://c0lpa4kaq1ai5" path="res://components/objects/snapzones/head_zone.tscn" id="1_782w4"]
[ext_resource type="PackedScene" uid="uid://bdwmserhqai5h" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_physics_hand_low.tscn" id="2_2atdw"]
[ext_resource type="PackedScene" uid="uid://ceb25cst7u1iu" path="res://game/swimming_level/movement/movement_swimming.tscn" id="2_dnupu"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="3_1p0c3"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_8mil5"]
[ext_resource type="PackedScene" uid="uid://dgutfpt2bshee" path="res://components/objects/snapzones/holster_snap_left.tscn" id="5_asup5"]
[ext_resource type="Script" path="res://components/helpers/random_stream_player.gd" id="5_lnyrf"]
[ext_resource type="PackedScene" uid="uid://bft3xyxs31ci3" path="res://addons/godot-xr-tools/functions/function_pose_detector.tscn" id="6_6oyei"]
[ext_resource type="AudioStream" uid="uid://digr67r048bwp" path="res://assets/nub_sfx/splash_1.ogg" id="6_psk1c"]
[ext_resource type="AudioStream" uid="uid://32j3dyfy1861" path="res://assets/nub_sfx/splash_2.ogg" id="7_rs6vy"]
[ext_resource type="PackedScene" uid="uid://btf05hjpw6k05" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_physics_hand_low.tscn" id="7_ti3pc"]
[ext_resource type="AudioStream" uid="uid://cviw24spdhv8f" path="res://assets/nub_sfx/splash_3.ogg" id="8_p3lg8"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_tgjbm"]
[ext_resource type="PackedScene" uid="uid://c2q5phg8w08o" path="res://addons/godot-xr-tools/functions/movement_jump.tscn" id="9_ivot8"]
[ext_resource type="AudioStream" uid="uid://cex5jxqyecvv" path="res://assets/nub_sfx/splash_4.ogg" id="9_rt3bw"]
[ext_resource type="PackedScene" uid="uid://2w6vn1n6hjrf" path="res://components/objects/snapzones/holster_snap_right.tscn" id="10_6xytc"]
[ext_resource type="AudioStream" uid="uid://12wuwm5o5j84" path="res://assets/nub_sfx/splash_5.ogg" id="10_8j7a2"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="11_c4wd4"]
[ext_resource type="AudioStream" uid="uid://dsktos7y3wfrl" path="res://assets/nub_sfx/breath.ogg" id="11_o55g3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rdwf7"]
radius = 0.2
height = 1.4

[node name="Player" type="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269177, 0)
current = true
script = ExtResource("1_87q83")

[node name="MovementSwimming" parent="." instance=ExtResource("2_dnupu")]
type = 0
drag = 1.0
physical_threshold = 0.1
physical_multiplier = 0.1

[node name="PlayerBody" parent="." instance=ExtResource("11_c4wd4")]

[node name="39947" type="CollisionShape3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_rdwf7")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
current = true
far = 300.0

[node name="HeadZone" parent="XRCamera3D" instance=ExtResource("1_782w4")]

[node name="RandomStreamPlayer" type="AudioStreamPlayer3D" parent="XRCamera3D"]
attenuation_model = 3
volume_db = -27.234
pitch_scale = 0.49
script = ExtResource("5_lnyrf")
streams = Array[AudioStream]([ExtResource("6_psk1c"), ExtResource("7_rs6vy"), ExtResource("8_p3lg8"), ExtResource("9_rt3bw"), ExtResource("10_8j7a2")])

[node name="Breath" type="AudioStreamPlayer" parent="XRCamera3D"]
stream = ExtResource("11_o55g3")
volume_db = -13.443
pitch_scale = 0.57

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
pose = &"aim"

[node name="LeftPhysicsHand" parent="LeftHand" instance=ExtResource("2_2atdw")]

[node name="MovementDirect" parent="LeftHand" instance=ExtResource("3_1p0c3")]
strafe = true

[node name="FunctionPickup" parent="LeftHand" groups=["LeftHandFunctionPickup"] instance=ExtResource("4_8mil5")]

[node name="HolsterSnapLeft" parent="LeftHand" instance=ExtResource("5_asup5")]

[node name="FunctionPoseDetector" parent="LeftHand" instance=ExtResource("6_6oyei")]

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
pose = &"aim"

[node name="RightPhysicsHand" parent="RightHand" instance=ExtResource("7_ti3pc")]

[node name="MovementDirect" parent="RightHand" instance=ExtResource("3_1p0c3")]

[node name="MovementTurn" parent="RightHand" instance=ExtResource("8_tgjbm")]

[node name="MovementJump" parent="RightHand" instance=ExtResource("9_ivot8")]
jump_button_action = "ax_button"

[node name="FunctionPickup" parent="RightHand" groups=["RightHandFunctionPickup"] instance=ExtResource("4_8mil5")]

[node name="HolsterSnapRight" parent="RightHand" instance=ExtResource("10_6xytc")]

[node name="FunctionPoseDetector" parent="RightHand" instance=ExtResource("6_6oyei")]
